Add aria-labels for better accessibility

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <section id="comparador">
             <h2>Comparar Ciudades</h2>
             <div id="inputs">
-                <input type="text" id="ciudad1" placeholder="Ciudad 1">
-                <input type="text" id="ciudad2" placeholder="Ciudad 2">
-                <button id="compararBtn">Comparar</button>
+                <input type="text" id="ciudad1" placeholder="Ciudad 1" aria-label="Nombre de la primera ciudad">
+                <input type="text" id="ciudad2" placeholder="Ciudad 2" aria-label="Nombre de la segunda ciudad">
+                <button id="compararBtn" aria-label="Comparar ciudades">Comparar</button>
             </div>
             <div id="grafico"></div>
         </section>
