--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
 </head>
 <body>
-    <header>
+    <header lang="es">
         <h1>Visualizador de Datos Climáticos</h1>
     </header>
     <main>
